[tool.poetry]
name = "nine"
version = "1.1.1.dev1"
description = "Python 2 / 3 compatibility, like six, but favouring Python 3"
readme = "README.rst"
authors = ["Nando Florestan <nandoflorestan@gmail.com>"]
license = "Public domain"
repository = "https://github.com/nandoflorestan/nine"
# documentation = "http://docs.nando.audio/nine/latest/"
classifiers = [
	# https://pypi.org/pypi?:action=list_classifiers
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 2.7",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.3",
	"Programming Language :: Python :: 3.4",
	"Programming Language :: Python :: 3.5",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	'Programming Language :: Python :: Implementation :: CPython',
	'Programming Language :: Python :: Implementation :: PyPy',
	"Topic :: Software Development :: Libraries :: Python Modules",
]
# A list of keywords (max: 5) that the package is related to
keywords = [
	"python 2",
	"python 3",
	"python2",
	"python3",
	"migration",
	"compatibility",
	"nine",
	"six",
	"2to3",
	"3to2",
	"future",
]

[tool.poetry.dependencies]
python = ">= 2.7"
# https://python-poetry.org/docs/dependency-specification/

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
